update format date report

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -22,7 +22,7 @@
             <b style="font-size:1rem;">Date from:</b>
           </label>
 
-                    <input type="text" class="form-control" placeholder="YYYY-MM-DD" bsDatepicker [(ngModel)]="FilterDateFrom" [bsConfig]="{dateInputFormat: 'YYYY-MM-DD',containerClass:'theme-blue',showWeekNumbers: false}" (bsValueChange)="FilterDateFrom = $event ; selectedStartDate()"
+                    <input type="text" class="form-control" placeholder="DD/MM/YYYY" bsDatepicker [(ngModel)]="FilterDateFrom" [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',containerClass:'theme-blue',showWeekNumbers: false}" (bsValueChange)="FilterDateFrom = $event ; selectedStartDate()"
                         style="display: inline-block; margin-left: 20px;" />
 
                 </div>
@@ -35,7 +35,7 @@
             <b style="font-size:1rem;">Date to:</b>
           </label>
 
-                    <input type="text" class="form-control" placeholder="YYYY-MM-DD" bsDatepicker [(ngModel)]="FilterDateTo" [bsConfig]="{dateInputFormat: 'YYYY-MM-DD',containerClass:'theme-blue',showWeekNumbers: false}" (bsValueChange)="FilterDateTo = $event ; selectedStartDate()"
+                    <input type="text" class="form-control" placeholder="DD/MM/YYYY" bsDatepicker [(ngModel)]="FilterDateTo" [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',containerClass:'theme-blue',showWeekNumbers: false}" (bsValueChange)="FilterDateTo = $event ; selectedStartDate()"
                         style="display: inline-block; margin-left: 20px;" />
 
                 </div>
