--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,38 +1,38 @@
 <div class="container-fluid app-content px-5">
-	<div class="row px-5">
-	  <div class="col-2" style="max-width: 9vw;">
-		<img class="pl-2" src="./assets/img/sosphone.png" style="width:7vw">
-	  </div>
-	  <div class="col" style="padding-top: 1.5%;">
-		<h3 class="lead shift-title" style="font-size:1.5vw;">(SOS)</h3>
-		<h1 class="lead" style="font-size:1.5vw">Single On-call Service</h1>
-	  </div>
-	</div>
+    <div class="row px-5">
+        <div class="col-2" style="max-width: 9vw;">
+            <img class="pl-2" src="./assets/img/sosphone.png" style="width:7vw">
+        </div>
+        <div class="col" style="padding-top: 1.5%;">
+            <h3 class="lead shift-title" style="font-size:1.5vw;">(SOS)</h3>
+            <h1 class="lead" style="font-size:1.5vw">Single On-call Service</h1>
+        </div>
+    </div>
 
-	<div class="row px-5">
-		<div class="col">
-			<h1 style="font-size:10vw; color: #336E7B;">Hello!</h1>
-			<p class="lead px-2" style="font-size:2vw">Welcome to SOS service, you can submit a ticket with <span style="color: red;">high priority</span> here.</p>
-		</div>
-	  </div>
-	  <div class="row">
-		<div class="mx-auto text-center" style=" margin: 5% auto;    width: 100%;">
-			<h1 class="lead" style="font-size:1.5vw; ">Click here</h1>
-			<div class="sonar-wrapper">
-					<div class="sonar-emitter">
-						<div class="sonar-wave"></div>
-						<a class="anchor" href="/home#sectionteam">
-							<img src="./assets/img/down.png" style="width:4vw;">
-						</a>
-					</div>
-				</div>
+    <div class="row px-5">
+        <div class="col">
+            <h1 style="font-size:10vw; color: #336E7B;">Hello!</h1>
+            <p class="lead px-2" style="font-size:2vw">Welcome to SOS service, you can submit a ticket with <span style="color: red;">high priority</span> here.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="mx-auto text-center" style=" margin: 5% auto;    width: 100%;">
+            <h1 class="lead" style="font-size:1.5vw; ">Click here</h1>
+            <div class="sonar-wrapper">
+                <div class="sonar-emitter">
+                    <div class="sonar-wave"></div>
+                    <a class="anchor" href="/home#sectionteam">
+                        <img src="./assets/img/down.png" style="width:4vw;">
+                    </a>
+                </div>
+            </div>
 
-		</div>
-	  </div>
-  </div>
+        </div>
+    </div>
+</div>
 
 <div class="container-fluid app-content">
-	<!-- <div class="section-title">
+    <!-- <div class="section-title">
 		<div class="row">
 			<div class="col-xs-2">
 				<img src="./assets/img/sosphone.png" style="width:12vw">
@@ -57,52 +57,72 @@
 	</div> -->
 
 
-	<div class="section-data">
-		<p id="sectionteam"></p>
-		<p class="lead text-center" style="font-size: 2.7vw;
+    <div class="section-data">
+        <p id="sectionteam"></p>
+        <p class="lead text-center" style="font-size: 2.7vw;
 		padding-top: 6.1rem;
 		margin-bottom: 2rem;
 		color: #95989A;
 		font-weight: bold;" id="instruction">Complete your ticket</p>
-		
-		<div class="container">
-			<div class="row justify-content-md-center">
-				<div class="col-md-2 push-md-2" style="max-width:8vw;"><img src="./assets/img/user.png" style="width:6vw;" id="shift-logo"></div>
-				<div class="col-md-6 pull-md-6">
-						<label for="example-text-input" class="col-2 col-form-label" style="font-size:1vw; color: #95989A;">Customer</label>
-						<input class="form-control" type="text" id="example-text-input"  [value]="UsernameBadge" disabled>
-				</div>
-			</div>
-			<div class="row justify-content-md-center">
-				<div  class="col-md-8" style="padding: 0 35px;">
-						<p style="font-size:1.5vw; padding-top:2rem;  color: #95989A;">Application</p>
 
-						<div class="dropdown">
-							<select class="form-control"  [(ngModel)]="teamSelected"  (ngModelChange)="selectTeam(teamSelected)" required >
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="col-md-2 push-md-2" style="max-width:8vw;"><img src="./assets/img/user.png" style="width:6vw;" id="shift-logo"></div>
+                <div class="col-md-6 pull-md-6">
+                    <label for="example-text-input" class="col-2 col-form-label" style="font-size:1vw; color: #95989A;">Customer</label>
+                    <input class="form-control" type="text" id="example-text-input" [value]="UsernameBadge" disabled>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col-md-8" style="padding: 0 35px;">
+                    <p style="font-size:1.5vw; padding-top:2rem;  color: #95989A;">Application</p>
+
+                    <div class="dropdown">
+                        <select class="form-control" [(ngModel)]="teamSelected" (ngModelChange)="selectTeam(teamSelected)" required>
 								<option *ngFor="let team of teamList" [ngValue]="team"  [disabled]="team.id == 0">{{team.name}}</option>
 							</select>
-						</div>
-				</div>
-			</div>
-			<div class="row justify-content-md-center">
-					<div  class="col-md-8" style="padding: 0 35px; margin-bottom: 7rem;">
-						<label for="comment" style="font-size:1.5vw; padding-top: 2rem;     color: #95989A;">Description</label>
-						<textarea class="form-control" rows="4" id="comment" id="example-text-description"  [(ngModel)]="description"  ></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col-md-8" style="padding: 0 35px; margin-bottom: 7rem;">
+                    <label for="comment" style="font-size:1.5vw; padding-top: 2rem;     color: #95989A;">Description</label>
+                    <textarea class="form-control" rows="4" id="comment" id="example-text-description" [(ngModel)]="description"></textarea>
 
-						<div style="text-align: center;">
-							<button type="button" class="btn btn-primary" style="margin-top:2vw;" id="button-submit" (click)="postTickets()">
+                    <div style="text-align: center;">
+                        <button type="button" class="btn btn-primary" style="margin-top:2vw;" id="button-submit" (click)="postTickets()">
 								<h2 style="font-size:1.4vw;   margin-bottom: 0;">SUBMIT</h2>
-						</button>						
-						</div>
-					</div>
-			</div>
+						</button>
+                    </div>
+                </div>
+            </div>
 
-		</div>
+        </div>
 
-	</div>
+    </div>
 
-	<div class="team-member" id="1team-members">	
+    <div class="team-member" id="1team-members">
 
 
-	</div>
+    </div>
+</div>
+
+<div bsModal #childModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left" style="color: #28a745;">Success</h4>
+
+            </div>
+            <div class="modal-body" style="text-align: center;">
+                <p style="font-weight: 500; margin-bottom: 20px; 
+		margin-top: 5px;" [innerHTML]="textStatus"></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success btn-cancel" aria-label="Close" (click)="hideChildModal()">Close</button>
+
+            </div>
+        </div>
+    </div>
+
 </div>
