--- a/src/app/oncall-schedule/oncall-schedule.component.html
+++ b/src/app/oncall-schedule/oncall-schedule.component.html
@@ -137,7 +137,7 @@
                 <div class="col-12" style=" text-align: center;">
                     <button *ngIf="groupIDSelected != 0 && scheduleIdSelected == 0 " type="button" class="btn btn-primary btn-submit" (click)="addSchedule()" [disabled]="lanId == '' || lanId == undefined || DateFrom == undefined || DateTo == undefined "> ADD </button>
                     <button *ngIf="scheduleIdSelected != 0 " type="button" class="btn btn-primary btn-submit" (click)="updateSchedule()"> UPDATE </button>
-                    <button *ngIf="scheduleIdSelected != 0 " type="button" class="btn btn-danger btn-delete" (click)="removeSchedule()"> DELETE </button>
+                    <button *ngIf="scheduleIdSelected != 0 " type="button" class="btn btn-danger btn-delete" (click)="showChildModal()"> DELETE </button>
                 </div>
             </div>
         </div>
@@ -159,4 +159,22 @@
         </div>
 
     </div>
+</div>
+
+<div bsModal #childModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left">Delete schedule</h4>
+            </div>
+            <div class="modal-body">
+                <p style="font-weight: 500; margin-bottom: 20px;  margin-top: 5px;">Are you sure you want to delete this schedule ?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-info btn-save" (click)="removeSchedule()">Yes</button>
+                <button type="button" class="btn btn-danger btn-cancel" (click)="hideChildModal()">No</button>
+            </div>
+        </div>
+    </div>
+
 </div>
