--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -119,7 +119,7 @@
 		margin-top: 5px;" [innerHTML]="textStatus"></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success btn-cancel" aria-label="Close" (click)="hideChildModal()">Close</button>
+                <button type="button" class="btn btn-success" aria-label="Close" (click)="hideChildModal()">Close</button>
 
             </div>
         </div>
