--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ body {
 
 @import "../node_modules/fullcalendar/dist/fullcalendar.min.css";
 @import  "../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css";
+@import "./assets/css/ng2-select.css";
 /* //modal style */
 
 .fade.in {
